# hyprnote

./: AGENTS.md  Cargo.toml  Taskfile.yaml  pnpm-lock.yaml
.codex/environments/: environment.toml
.github/workflows/: cli_standalone_cd.yaml  desktop_cd.yaml
apps/cli/: Cargo.toml
apps/cli/src/: cli.rs  main.rs
apps/cli/src/commands/: humans.rs  mod.rs  orgs.rs
apps/cli/src/commands/chat/: app.rs  effect.rs  mod.rs  runtime.rs
apps/cli/src/commands/chat/ui/: context_panel.rs  header.rs
apps/cli/src/commands/configure/: mod.rs  ui.rs
apps/cli/src/commands/connect/: mod.rs  runtime.rs  screen.rs
apps/cli/src/commands/entry/: action.rs  effect.rs  mod.rs  screen.rs
apps/cli/src/commands/entry/app/: commands.rs  mod.rs
apps/cli/src/commands/entry/ui/: command_popup.rs  mod.rs
apps/cli/src/commands/listen/: exit.rs  mod.rs  post_meeting.rs
apps/cli/src/commands/meetings/: action.rs  app.rs  effect.rs  mod.rs  screen.rs  ui.rs
apps/cli/src/commands/meetings/view/: action.rs  app.rs  effect.rs  mod.rs  ui.rs
apps/cli/src/commands/model/: app.rs  mod.rs
apps/cli/src/commands/timeline/: app.rs  mod.rs
apps/cli/src/commands/transcribe/: mod.rs  output.rs  response.rs  screen.rs
apps/cli/src/commands/update/: app.rs  mod.rs  screen.rs
apps/cli/src/services/: calendar_sync.rs  mod.rs
apps/desktop/: package.json
apps/desktop/src/: test-setup.ts
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/calendar/components/: sidebar.tsx
apps/desktop/src/changelog/: index.tsx
apps/desktop/src/chat/: session-context-hydrator.ts
apps/desktop/src/chat/components/: chat-panel.tsx  context-bar.tsx  header.tsx  persistent-chat.tsx
apps/desktop/src/daily/: index.tsx
apps/desktop/src/session/components/: session-preview-card.tsx
apps/desktop/src/settings/: index.tsx
apps/desktop/src/settings/calendar/: index.tsx
apps/desktop/src/settings/general/: index.tsx  notification-app-options.test.ts  notification-app-options.ts  notification.tsx
apps/desktop/src/shared/config/: index.ts
apps/desktop/src/stt/: pending-upload.ts  useStartListening.ts  useUploadFile.ts
apps/web/content/articles/: best-ai-notetaker-for-in-person-meetings.mdx  mistral-data-retention-policy.mdx  openrouter-data-retention-policy.mdx  w12-2026.mdx
apps/web/content/updates/: 2026-03-15.mdx
apps/web/src/: routeTree.gen.ts
apps/web/src/functions/: auth.ts
crates/api-cactus/: Cargo.toml
crates/api-cactus/src/: lib.rs
crates/api-client/: openapi.gen.json
crates/audio-sync/: Cargo.toml
crates/audio-sync/src/: lib.rs
crates/calendar/: Cargo.toml
crates/calendar/src/: lib.rs
crates/calendar/src/sync/: calendars.rs  events.rs  mod.rs  service.rs
crates/db-app/migrations/: 20260318000002_meetings.sql  20260318000003_words.sql  20260318000004_speaker_hints.sql  20260318000005_chat_messages.sql  20260318000006_meetings_fts.sql  20260318000009_meeting_participants.sql  20260318000010_notes.sql  20260318000014_threads_messages.sql  20260318000018_timeline_view.sql
crates/db-app/src/: chat_messages_ops.rs  chat_messages_types.rs  folders_ops.rs  humans_ops.rs  lib.rs  meeting_participants_ops.rs  meeting_participants_types.rs  meetings_ops.rs  meetings_types.rs  notes_ops.rs  notes_types.rs  threads_messages_ops.rs  threads_messages_types.rs  transcript_ops.rs  visibility_ops.rs
crates/db-user/src/: config_types.rs
crates/fs-sync-core/src/: session_content.rs  types.rs
crates/intercept/src/: lib.rs
crates/intercept/swift-lib/src/: EntryPoint.swift  QuitInterceptor.swift  QuitOverlayConfig.swift  QuitOverlayPanel.swift
crates/listener-core/: Cargo.toml
crates/listener-core/src/: lib.rs
crates/listener-core/src/actors/: root.rs
crates/listener-core/src/actors/recorder/: disk.rs  memory.rs  mod.rs
crates/listener-core/src/actors/session/: supervisor.rs
crates/listener-core/src/actors/source/: pipeline.rs
crates/local-stt-server/src/: lib.rs
crates/mp3/src/: encoder.rs  lib.rs  wav.rs
crates/mp3/tests/: stream_encoder.rs  wav_errors.rs  wav_roundtrip.rs
crates/mp3/tests/common/: mod.rs
crates/template-app/: Cargo.toml
crates/template-app/tests/llm_eval/: main.rs  support.rs
crates/template-cli/assets/: chat.context.md.jinja
crates/template-cli/src/: lib.rs
crates/template-eval/: Cargo.toml
crates/template-eval/src/: lib.rs
crates/template-eval/src/eval/: artifacts.rs  expectations.rs  harness.rs  mod.rs  openrouter.rs  runner.rs  types.rs  util.rs
crates/transcribe-cactus/examples/batch/: server.rs
crates/transcribe-cactus/src/service/: mod.rs
crates/transcribe-cactus/tests/: batch.rs  live.rs
crates/transcribe-cactus/tests/common/: mod.rs
crates/vad-chunking/: Cargo.toml
crates/vad-chunking/examples/: chunking.rs
crates/vad-chunking/src/: continuous.rs  error.rs  lib.rs  session.rs
crates/vad/src/silero_onnx/: v6.rs
crates/ws-client/src/: retry.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
plugins/calendar/: build.rs
plugins/calendar/js/: bindings.gen.ts
plugins/calendar/permissions/: default.toml
plugins/calendar/permissions/autogenerated/: reference.md
plugins/calendar/permissions/schemas/: schema.json
plugins/calendar/src/: commands.rs  lib.rs
plugins/detect/js/: bindings.gen.ts
plugins/detect/src/: commands.rs  ext.rs  lib.rs  mic_usage_tracker.rs  policy.rs  timer_registry.rs
plugins/fs-db/: Cargo.toml
plugins/fs-db/js/: bindings.gen.ts
plugins/fs-db/src/: error.rs  ext.rs  lib.rs
plugins/fs-sync/js/: bindings.gen.ts
plugins/listener/js/: bindings.gen.ts
plugins/listener/src/: commands.rs  error.rs  ext.rs
plugins/local-stt/src/server/: internal2.rs
plugins/misc/: Cargo.toml  build.rs
plugins/misc/js/: bindings.gen.ts
plugins/misc/permissions/: default.toml
plugins/misc/permissions/autogenerated/: reference.md
plugins/misc/permissions/schemas/: schema.json
plugins/misc/src/: commands.rs  ext.rs  lib.rs
plugins/tray/src/menu_items/: tray_quit.rs
plugins/windows/js/: bindings.gen.ts
plugins/windows/src/tab/: mod.rs
scripts/: setup-linux-others.sh
(+45 files in other folders)
