[package]
name = "template-eval"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { workspace = true }
hypr-openrouter = { workspace = true }
libtest-mimic = "0.8.1"
markdown = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
hypr-askama-utils = { workspace = true }
insta = { workspace = true }
