[package]
name = "vad-chunking"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
futures-util = { workspace = true }
hound = { workspace = true }
hypr-data = { workspace = true }
rodio = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[example]]
name = "chunking"

[dependencies]
hypr-audio-interface = { workspace = true }
hypr-onnx = { workspace = true }
hypr-vad = { workspace = true, features = ["silero-onnx"] }

futures-util = { workspace = true }
pin-project = { workspace = true }
thiserror = { workspace = true }
