[package]
name = "tauri-plugin-fs-db"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-fs-db"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[dependencies]
tauri = { workspace = true, features = ["test"] }
tauri-plugin-settings = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

serde = { workspace = true }
specta = { workspace = true }

chrono = { workspace = true }
chrono-tz = { workspace = true }
hypr-db-parser = { workspace = true }
hypr-frontmatter = { workspace = true }
hypr-tiptap = { workspace = true }
hypr-version = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
uuid = { workspace = true }
